# cmd/api-server/service/config_import.go
@@ -227,6 +227,7 @@ func (c *configImport) TemplateConfigFileImport(w http.ResponseWriter, r *http.R
 		tuple, err := c.cfgClient.ListTemplateByTuple(kt.RpcCtx(), &pbcs.ListTemplateByTupleReq{
 			BizId:           kt.BizID,
 			TemplateSpaceId: uint32(tmplSpaceID),
+			ProjectId:       kt.ProjectID,
 			Items:           batch,
 		})
 		if err != nil {
@@ -433,9 +434,11 @@ func (c *configImport) ConfigFileImport(w http.ResponseWriter, r *http.Request) 
 		}
 		batch := configItems[i:end]
 		tuple, errC := c.cfgClient.ListConfigItemByTuple(kt.RpcCtx(), &pbcs.ListConfigItemByTupleReq{
-			BizId: kt.BizID,
-			AppId: kt.AppID,
-			Items: batch,
+			BizId:     kt.BizID,
+			AppId:     kt.AppID,
+			Items:     batch,
+			ProjectId: kt.ProjectID,
+			EnvId:     kt.EnvID,
 		})
 		if errC != nil {
 			_ = render.Render(w, r, rest.BadRequest(errors.New(i18n.T(kt, "list config item failed, err: %v", errC))))
@@ -802,9 +805,11 @@ func sortByPathName(myStructs []*types.TemplateItem) {
 func (c *configImport) checkFileConfictsWithNonTemplates(kt *kit.Kit, files []tools.CIUniqueKey) error {
 	// 获取服务下的所有非模板配置文件
 	items, err := c.cfgClient.ListConfigItems(kt.RpcCtx(), &pbcs.ListConfigItemsReq{
-		BizId: kt.BizID,
-		AppId: kt.AppID,
-		All:   true,
+		BizId:     kt.BizID,
+		AppId:     kt.AppID,
+		All:       true,
+		ProjectId: kt.ProjectID,
+		EnvId:     kt.EnvID,
 	})
 	if err != nil {
 		return err
@@ -829,6 +834,7 @@ func (c *configImport) checkFileConfictsWithTemplates(kt *kit.Kit, templateSpace
 		BizId:           kt.BizID,
 		TemplateSpaceId: templateSpaceId,
 		All:             true,
+		ProjectId:       kt.ProjectID,
 	})
 	if err != nil {
 		return errors.New(i18n.T(kt, "list templates failed, err: %v", err))
