# docs/swagger/bkapigw.swagger.json
@@ -1794,6 +1794,63 @@
         ]
       }
     },
+    "/api/v1/config/biz/{bizId}/projects/{projectId}/template_spaces/{templateSpaceId}/templates/list_not_bound": {
+      "post": {
+        "summary": "获取未绑定的模板列表",
+        "operationId": "Config_ListTemplatesNotBound2",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbcsListTemplatesNotBoundResp"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "bizId",
+            "description": "业务ID",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "projectId",
+            "description": "项目ID",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "templateSpaceId",
+            "description": "模板空间ID",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ConfigListTemplatesNotBoundBody"
+            }
+          }
+        ],
+        "tags": [
+          "Config"
+        ]
+      }
+    },
     "/api/v1/config/biz/{bizId}/groups/query/name/{groupName}": {
       "get": {
         "summary": "按名称获取分组",
@@ -1830,7 +1887,7 @@
           },
           {
             "name": "projectId",
-            "description": "项目ID（additional_bindings使用）",
+            "description": "项目ID",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -1878,7 +1935,7 @@
           },
           {
             "name": "projectId",
-            "description": "项目ID（additional_bindings使用）",
+            "description": "项目ID",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -1890,7 +1947,7 @@
         ]
       }
     },
-    "/api/v1/config/biz/{bizId}/projects/{projectId}/groups/query/name/{groupName}": {
+    "/api/v1/config/biz/{bizId}/projects/{projectId}/groups:search": {
       "get": {
         "summary": "按名称获取分组",
         "operationId": "Config_GetGroupByName3",
@@ -1919,7 +1976,7 @@
           },
           {
             "name": "projectId",
-            "description": "项目ID（additional_bindings使用）",
+            "description": "项目ID",
             "in": "path",
             "required": true,
             "type": "integer",
@@ -1928,8 +1985,8 @@
           {
             "name": "groupName",
             "description": "分组名",
-            "in": "path",
-            "required": true,
+            "in": "query",
+            "required": false,
             "type": "string"
           }
         ],
@@ -4532,7 +4589,7 @@
         ]
       }
     },
-    "/api/v1/config/biz/{bizId}/projects/list": {
+    "/api/v1/config/biz/{bizId}/projects:list": {
       "post": {
         "summary": "项目管理",
         "operationId": "Config_ListProjects",
@@ -4741,7 +4798,7 @@
         ]
       }
     },
-    "/api/v1/config/biz/{bizId}/projects/{projectId}/envs/list": {
+    "/api/v1/config/biz/{bizId}/projects/{projectId}/envs:list": {
       "post": {
         "summary": "环境管理",
         "operationId": "Config_ListEnvironments",
